    - RedirectExits is now deprecated.

  o Minor features (controller):
    - You can now use the ControlSocket option to tell Tor to listen for
      controller connections on Unix domain sockets on systems that support
      them.  (Patch from Peter Palfrader.)
    - STREAM NEW events are generated for DNSPort requests and for tunneled
      directory connections. (Patch from Robert Hogan.)

  o Minor bugfixes (directory):
    - Fix another crash bug related to extra-info caching.  (Bug found by
      Peter Palfrader.) [Bugfix on 0.2.0.2-alpha]
    - Directories no longer return a "304 not modified" when they don't
      have the networkstatus the client asked for. Also fix a memory
      leak when returning 304 not modified. [Bugfixes on 0.2.0.2-alpha]

  o Minor bugfixes (dns):
    - Fix a crash when DNSPort is set more than once. (Patch from Robert
      Hogan.) [Bugfix on 0.2.0.2-alpha]
    - Add DNSPort connections to the global connection list, so that we
      can time them out correctly. (Bug found by mwenge) [Bugfix on
      0.2.0.2-alpha]
    - Fix eventdns.c behavior on Solaris: It is critical to include
      orconfig.h _before_ sys/types.h, so that we can get the expected
      definition of _FILE_OFFSET_BITS.  [Bugfix on 0.1.2.x]

  o Minor bugfixes (hidden services):
    - Stop tearing down the whole circuit when the user asks for a
      connection to a port that the hidden service didn't configure.
      Resolves bug 444.  [Bugfix on 0.1.2.x]

  o Minor bugfixes (versioning):
    - Stop under-counting the number of authorities that recommend each
      version. [Bugfix on 0.1.2.x]

  o Minor bugfixes (guard nodes):
    - If there's a never-before-connected-to guard node in our list,
      never choose any guards past it. This way we don't expand our
      guard list unless we need to. [Bugfix in 0.1.2.x]


Changes in version 0.2.0.2-alpha - 2007-06-02
  o Major bugfixes on 0.2.0.1-alpha: